--- a/code - solve for tomorrow.ipynb
+++ b/code - solve for tomorrow.ipynb
@@ -25,7 +25,7 @@
     "options = webdriver.ChromeOptions()\n",
     "# options.add_argument('--headless')\n",
     "options.add_argument('--disable-gpu')  # Last I checked this was necessary.\n",
-    "CHROMEDRIVER_PATH = \"E:/Solve for Tomorrow (6292020)/Selenium/chromedriver.exe\"\n",
+    "CHROMEDRIVER_PATH = 'E:/GOMMT/Solve for Tomorrow (6292020)/Selenium/chromedriver.exe'\n",
     "driver = webdriver.Chrome(CHROMEDRIVER_PATH, options=options)"
    ]
   },
@@ -37,17 +37,6 @@
    "source": [
     "driver.get(\"https://www.easemytrip.com/\")\n",
     "driver.maximize_window()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# content = driver.page_source\n",
-    "# soup = BeautifulSoup(content)\n",
-    "# soup.findAll('div', attrs={'class':'middle_sec'})"
    ]
   },
   {
@@ -64,55 +53,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WebDriver' object has no attribute 'findElements'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-41670f8d6d3e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# driver.find_element_by_xpath('/html/body/div[13]/div/div/ul')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mallElements\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindElements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/html/body/div[13]/div/div/ul/li\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# for (WebElement element: allElements) {\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#       System.out.println(element.getText());\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'WebDriver' object has no attribute 'findElements'"
+     "data": {
+      "text/plain": [
+       "['https://www.easemytrip.com/offers/coupon.html',\n",
+       " 'https://www.easemytrip.com/offers/new-user.html',\n",
+       " 'https://www.easemytrip.com/offers/coupon.html',\n",
+       " 'https://www.easemytrip.com/offers/new-user.html',\n",
+       " 'https://www.easemytrip.com/offers/coupon.html',\n",
+       " 'https://www.easemytrip.com/offers/new-user.html']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From https://www.easemytrip.com/flights.html\n",
+    "List = driver.find_element_by_xpath('/html/body/div[13]/div/div/ul')\n",
+    "allElements = List.find_elements_by_tag_name(\"a\")\n",
+    "links = []\n",
+    "for element in allElements:\n",
+    "    links.append(element.get_attribute(\"href\"))\n",
+    "links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class coupon:\n",
+    "    def __init__(self, code, what_You_Get,How_do_you_get_it,What_else_do_you_need_to_know,Terms_and_Conditions):\n",
+    "        self.code = code\n",
+    "        self.what_You_Get = what_You_Get\n",
+    "        self.How_do_you_get_it = How_do_you_get_it\n",
+    "        self.What_else_do_you_need_to_know = What_else_do_you_need_to_know\n",
+    "        self.Terms_and_Conditions = Terms_and_Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "couponList = []\n",
+    "for link in links:\n",
+    "    driver.get(link)\n",
+    "    content = driver.page_source\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    code = soup.find('div', attrs={'class':'cp_code'}).text\n",
+    "    i = 1\n",
+    "    ele = soup.findAll('ul', attrs={'class':'dot-list'})\n",
+    "    a = ''.join(ele[0].findAll(text=True)).strip()\n",
+    "    b = ''.join(ele[1].findAll(text=True)).strip()\n",
+    "    c = ''.join(ele[2].findAll(text=True)).strip()\n",
+    "    d = ''.join(ele[3].findAll(text=True)).strip()\n",
+    "    x = coupon(code,a,b,c,d)\n",
+    "    couponList.append(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EMT2020\n",
+      "EMTFIRST\n",
+      "EMT2020\n",
+      "EMTFIRST\n",
+      "EMT2020\n",
+      "EMTFIRST\n"
      ]
     }
    ],
    "source": [
-    "# driver.find_element_by_xpath('/html/body/div[13]/div/div/ul')\n",
-    "allElements = driver.findElements(By.xpath(\"/html/body/div[13]/div/div/ul/li\")); \n",
-    "\n",
-    "# for (WebElement element: allElements) {\n",
-    "#       System.out.println(element.getText());\n",
-    "# }\n",
-    "allElements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-7d27c8915692>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#clicking view more\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbutton\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_elements_by_class_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"btn-white-green\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mActionChains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmove_to_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbutton\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mperform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "# #clicking view more\n",
-    "# button = driver.find_elements_by_class_name(\"btn-white-green\")[0]\n",
-    "# for i in range(15):\n",
-    "#     webdriver.ActionChains(driver).move_to_element(button).perform()\n",
-    "#     time.sleep(2)\n",
-    "#     webdriver.ActionChains(driver).click(button).perform()"
+    "for coupon in couponList:\n",
+    "    print(coupon.code)"
    ]
   },
   {
@@ -121,18 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# speakers=[] #List to speaker information\n",
-    "# speaker_image_urls = []\n",
-    "# content = driver.page_source\n",
-    "# soup = BeautifulSoup(content)\n",
-    "# for div in soup.findAll('div', attrs={'class':'speaker'}):\n",
-    "#     speaker = div.find('div', attrs={'class':'speaker__content__inner'})\n",
-    "#     speaker_image = div.find('div', attrs={'class':'speaker__image'})\n",
-    "#     speakers.append(speaker.get_text(strip=True, separator=\"$\").split('$'))\n",
-    "#     speaker_image_urls.append(speaker_image['style'][23:-3])\n",
-    "# print('No. of speakers: ', len(speakers))\n",
-    "# print(speakers[0])\n",
-    "# print(speaker_image_urls[0])"
+    "driver.get('https://flight.easemytrip.com/FlightList/Index?srch=DEL-Delhi-India|BOM-Mumbai-India|09/07/2020&px=1-0-0&cbn=0&ar=undefined&isow=true&isdm=true&lng=&')\n"
    ]
   },
   {
@@ -140,76 +156,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# names = []\n",
-    "# Designations = []\n",
-    "# companies = []\n",
-    "# for speaker in speakers:\n",
-    "#     names.append(speaker[0])\n",
-    "#     Designations.append(speaker[1])\n",
-    "#     companies.append(speaker[2])"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# linkedin_urls = []\n",
-    "# for speaker in speakers:\n",
-    "#     query = speaker[0] + ' ' + speaker[1] + ' ' + speaker[2] + ' linkedin'\n",
-    "# #     query = 'Brad Smith President Microsoft Corporation linkedin'\n",
-    "#     for j in search(query, tld=\"co.in\", num=10, stop=1, pause=2):\n",
-    "#         linkedin_urls.append(j)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# driver.execute_script(\"window.scrollBy(0,0)\",\"\")\n",
-    "# time.sleep(2)\n",
-    "# short_biographies = []\n",
-    "# for i in range(len(names)):\n",
-    "#     el = driver.find_elements_by_class_name(\"speaker\")\n",
-    "#     webdriver.ActionChains(driver).move_to_element(el[i]).perform()\n",
-    "#     time.sleep(1)\n",
-    "#     webdriver.ActionChains(driver).click(el[i]).perform()\n",
-    "#     content = driver.page_source\n",
-    "#     soup = BeautifulSoup(content)\n",
-    "#     for obj in soup.findAll('div', attrs={'class':'modal-content'}):\n",
-    "#         short_biographies.append(obj.find_all(\"p\")[0].text)\n",
-    "#     close_button = driver.find_elements_by_class_name(\"close-btn\")\n",
-    "#     print(i,' \\n')\n",
-    "#     webdriver.ActionChains(driver).click(close_button[0]).perform()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# len(short_biographies)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# df = pd.DataFrame({'Speaker Name':names,\n",
-    "#                    'Display Pic url':speaker_image_urls,\n",
-    "#                    'Designation':Designations,\n",
-    "#                    'Company':companies,\n",
-    "#                    'Short bio':short_biographies,\n",
-    "#                    'Linkedin': linkedin_urls}) \n",
-    "# df.to_csv('ID01.csv', index=False, encoding='utf-8')"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
